# llm-chess-evaluation-harness

./: .gitignore  .gitmodules  README.md  chess_eval.py  chess_mcp_server.py  eval_config.py  index.html  pyproject.toml  requirements.txt
pgn_output/: game_001_gemini-3.1-flash-lite_elo1320_20260529_112403.pgn  game_001_gemini-3.5-flash_elo1320_20260529_112740.pgn  game_001_gemini-3.5-flash_elo1400_20260529_114913.pgn  game_001_gemini-3.5-flash_elo1450_20260529_115923.pgn  game_001_gemini-3.5-flash_elo1500_20260529_122656.pgn  game_001_gemini-3.5-flash_elo1900_20260616_200458.pgn  game_001_google_gemini-3.5-flash_elo1600_20260603_101147.pgn  game_001_google_gemini-3.5-flash_elo1800_20260603_104054.pgn  game_001_google_gemini-3.5-flash_elo2000_20260603_111914.pgn  game_001_gpt-4.1-mini_elo1320_20260529_104415.pgn  game_001_gpt-4.1-nano_elo1320_20260529_083001.pgn  game_001_gpt-4.1_elo1320_20260529_105717.pgn  game_001_gpt-4o-mini_elo1320_20260529_104129.pgn  game_001_gpt-4o_elo1320_20260529_105409.pgn  game_001_gpt-5.4-mini_elo1320_20260529_105202.pgn  game_001_gpt-5.4-nano_elo1320_20260529_102350.pgn  game_001_gpt-5.4-nano_elo1320_20260531_213315.pgn  game_001_gpt-5.4-nano_elo1320_20260531_213358.pgn  game_001_gpt-5.4-nano_elo1320_20260531_213730.pgn  game_001_gpt-5.4-nano_elo1500_20260529_195717.pgn  game_001_gpt-5.4-nano_elo1500_20260529_202151.pgn  game_001_gpt-5.4_elo1320_20260529_110155.pgn  game_001_gpt-5.5_elo1320_20260603_145001.pgn  game_002_gemini-3.1-flash-lite_elo1320_20260529_112438.pgn  game_002_gemini-3.5-flash_elo1320_20260529_113525.pgn  (+34 more)
