[project]
name = "llm-chess-evaluation-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess~=1.11.2",
    "mcp~=1.27.1",
    "openai~=2.38.0",
    "python-dotenv~=1.2.2",
    "rich~=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
eval = "chess_eval:main"
mcp = "chess_mcp_server:main"

[tool.hatch.build]
include = [
    "chess_eval.py",
    "chess_mcp_server.py",
    "eval_config.py",
]
